Colaboratory를 통해 생성됨

--- a/Chapter_06_클래스와_객체의_이해.ipynb
+++ b/Chapter_06_클래스와_객체의_이해.ipynb
@@ -51,6 +51,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NYxaErxqM4Gk",
+        "colab_type": "text"
+      },
+      "source": [
+        "###   인간(class) ---- 홍길동, 임꺽정(objec)\n",
+        "###   인간은 국적, 이름(attribute)\n",
+        "###          행동한다(method)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Fk7_zX9B16jT",
         "colab_type": "text"
       },
@@ -68,13 +80,27 @@
       "metadata": {
         "id": "9jMwB-iG16jU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "51d6972b-6d85-40d5-c6f0-2ccb146db390"
       },
       "source": [
-        ""
+        "a=[1,2,3,4]\n",
+        "a.append(5)\n",
+        "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -122,10 +148,44 @@
         "colab": {}
       },
       "source": [
-        ""
+        "class Person:\n",
+        "    pass     ## 정의는 하고 싶은데 비워두고 싶을 때 사용하는 명령어"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jIq9spHMO_MK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "d148b018-f450-4d56-f230-b14083cfeab4"
+      },
+      "source": [
+        "bob=Person()\n",
+        "cathy=Person()\n",
+        "\n",
+        "a=list()\n",
+        "b=list()\n",
+        "\n",
+        "print(type(bob), type(cathy))\n",
+        "print(type(a), type(b))\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class '__main__.Person'> <class '__main__.Person'>\n",
+            "<class 'list'> <class 'list'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,15 +206,249 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T0N1mkOX16jj",
+        "id": "YlWMRk74QIWd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "0fc21871-acc5-445c-b86a-f7425d096e87"
       },
       "source": [
-        ""
+        "class Person:\n",
+        "    def __init__(self):\n",
+        "        print(self, 'is generated')\n",
+        "        self.name='kate'\n",
+        "        self.age=10\n",
+        "        \n",
+        "p1=Person()\n",
+        "p2=Person()\n",
+        "\n",
+        "p1.name, p2.age"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<__main__.Person object at 0x7f71e9d53d68> is generated\n",
+            "<__main__.Person object at 0x7f71e9d53eb8> is generated\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('kate', 10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nr9TVXxwQIFR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "67bb7ff9-4a2f-42e2-e4fc-0ab1372e777d"
+      },
+      "source": [
+        "p1.name='aron'\n",
+        "p1.age=20\n",
+        "\n",
+        "print(p1.name, p1.age)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "aron 20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T0N1mkOX16jj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "a5329803-7d7e-4899-dcea-d3fbd7a8f599"
+      },
+      "source": [
+        "class Person:\n",
+        "    def __init__(self,name,age):  ## 여기에서 name, age는 parameter임. 속성에 있는(self뒤에 있는 name, age)\n",
+        "                                   ## name, age와 같을 필요는 없다. 아래 예시 참조\n",
+        "       # print(self, 'is generated')\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "        \n",
+        "p1=Person('bob',30)\n",
+        "p2=Person('kate',20)\n",
+        "\n",
+        "print(p1.name, p1.age)\n",
+        "print(p2.name, p2.age)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob 30\n",
+            "kate 20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JsxEmeOmSnyQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "d22352b9-096f-4bc0-c7df-9c00d75805ba"
+      },
+      "source": [
+        "class Person:\n",
+        "    def __init__(self,n,a):\n",
+        "       # print(self, 'is generated')\n",
+        "        self.name=n\n",
+        "        self.age=a\n",
+        "        \n",
+        "p1=Person('bob',30)\n",
+        "p2=Person('kate',20)\n",
+        "\n",
+        "print(p1.name, p1.age)\n",
+        "print(p2.name, p2.age)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob 30\n",
+            "kate 20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U7bVDOq2SuFn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "7580e688-5bed-4740-bad7-8a5e6fbb83ea"
+      },
+      "source": [
+        "class Person:\n",
+        "    def __init__(self,name,age=10):  ## 함수이기 때문에 기본값을 줄 수 있다. \n",
+        "       # print(self, 'is generated')\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "        \n",
+        "p1=Person('bob',30)\n",
+        "p2=Person('kate',20)\n",
+        "p3=Person('john')\n",
+        "\n",
+        "print(p1.name, p1.age)\n",
+        "print(p2.name, p2.age)\n",
+        "print(p3.name, p3.age)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob 30\n",
+            "kate 20\n",
+            "john 10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BOy0iFqmVUqh",
+        "colab_type": "text"
+      },
+      "source": [
+        "### self\n",
+        "- 파이썬의 method는 항상 첫번째 인자로 self를 전달\n",
+        "- self는 현재 해당 메쏘드가 호출되는 객체 자신을 가리킴\n",
+        "- C++/C#, Java의 this에 해당\n",
+        "- 역시, 이름이 self일 필요는 없으나, 위치는 항상 맨 처음의 parameter이며 관례적으로 self로 사용"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mel9ypu5VWPA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "outputId": "fef5a08f-0904-430f-be1d-68af5e3cfe59"
+      },
+      "source": [
+        "class Person:\n",
+        "    def __init__(self,name, age):\n",
+        "        print('self:', self)\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    \n",
+        "    def sleep(self):\n",
+        "        print('self:', self)\n",
+        "        print(self.name, '은 잠을 잡니다')\n",
+        "        \n",
+        "a=Person('aron',30)\n",
+        "b=Person('bob',40)\n",
+        "print(a,b)\n",
+        "\n",
+        "a.sleep()\n",
+        "b.sleep()"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "self: <__main__.Person object at 0x7f71e9c75e48>\n",
+            "self: <__main__.Person object at 0x7f71e9c75a58>\n",
+            "<__main__.Person object at 0x7f71e9c75e48> <__main__.Person object at 0x7f71e9c75a58>\n",
+            "self: <__main__.Person object at 0x7f71e9c75e48>\n",
+            "aron 은 잠을 잡니다\n",
+            "self: <__main__.Person object at 0x7f71e9c75a58>\n",
+            "bob 은 잠을 잡니다\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
