Colaboratory를 통해 생성됨

--- a/Chapter_06_클래스와_객체의_이해.ipynb
+++ b/Chapter_06_클래스와_객체의_이해.ipynb
@@ -80,18 +80,18 @@
       "metadata": {
         "id": "9jMwB-iG16jU",
         "colab_type": "code",
+        "outputId": "51d6972b-6d85-40d5-c6f0-2ccb146db390",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "51d6972b-6d85-40d5-c6f0-2ccb146db390"
+        }
       },
       "source": [
         "a=[1,2,3,4]\n",
         "a.append(5)\n",
         "print(a)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,11 +159,11 @@
       "metadata": {
         "id": "jIq9spHMO_MK",
         "colab_type": "code",
+        "outputId": "d148b018-f450-4d56-f230-b14083cfeab4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "d148b018-f450-4d56-f230-b14083cfeab4"
+        }
       },
       "source": [
         "bob=Person()\n",
@@ -175,7 +175,7 @@
         "print(type(bob), type(cathy))\n",
         "print(type(a), type(b))\n"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,11 +208,11 @@
       "metadata": {
         "id": "YlWMRk74QIWd",
         "colab_type": "code",
+        "outputId": "0fc21871-acc5-445c-b86a-f7425d096e87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "0fc21871-acc5-445c-b86a-f7425d096e87"
+        }
       },
       "source": [
         "class Person:\n",
@@ -226,7 +226,7 @@
         "\n",
         "p1.name, p2.age"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,11 +255,11 @@
       "metadata": {
         "id": "nr9TVXxwQIFR",
         "colab_type": "code",
+        "outputId": "67bb7ff9-4a2f-42e2-e4fc-0ab1372e777d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "67bb7ff9-4a2f-42e2-e4fc-0ab1372e777d"
+        }
       },
       "source": [
         "p1.name='aron'\n",
@@ -267,7 +267,7 @@
         "\n",
         "print(p1.name, p1.age)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,11 +283,11 @@
       "metadata": {
         "id": "T0N1mkOX16jj",
         "colab_type": "code",
+        "outputId": "a5329803-7d7e-4899-dcea-d3fbd7a8f599",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "a5329803-7d7e-4899-dcea-d3fbd7a8f599"
+        }
       },
       "source": [
         "class Person:\n",
@@ -303,7 +303,7 @@
         "print(p1.name, p1.age)\n",
         "print(p2.name, p2.age)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,11 +320,11 @@
       "metadata": {
         "id": "JsxEmeOmSnyQ",
         "colab_type": "code",
+        "outputId": "d22352b9-096f-4bc0-c7df-9c00d75805ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "d22352b9-096f-4bc0-c7df-9c00d75805ba"
+        }
       },
       "source": [
         "class Person:\n",
@@ -339,7 +339,7 @@
         "print(p1.name, p1.age)\n",
         "print(p2.name, p2.age)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,11 +356,11 @@
       "metadata": {
         "id": "U7bVDOq2SuFn",
         "colab_type": "code",
+        "outputId": "7580e688-5bed-4740-bad7-8a5e6fbb83ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "7580e688-5bed-4740-bad7-8a5e6fbb83ea"
+        }
       },
       "source": [
         "class Person:\n",
@@ -377,7 +377,7 @@
         "print(p2.name, p2.age)\n",
         "print(p3.name, p3.age)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,11 +409,11 @@
       "metadata": {
         "id": "mel9ypu5VWPA",
         "colab_type": "code",
+        "outputId": "fef5a08f-0904-430f-be1d-68af5e3cfe59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "outputId": "fef5a08f-0904-430f-be1d-68af5e3cfe59"
+        }
       },
       "source": [
         "class Person:\n",
@@ -433,7 +433,7 @@
         "a.sleep()\n",
         "b.sleep()"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,6 +468,141 @@
       "metadata": {
         "id": "xhfF3FBr16jo",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1b90c366-09e0-42f3-826f-2975bf9e397b"
+      },
+      "source": [
+        "a=list()\n",
+        "a.append(0)\n",
+        "print(a)\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2O-TceJhdeP9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "cbb52ad1-b559-4d42-93d3-254ce02d067f"
+      },
+      "source": [
+        "class counter:\n",
+        "    def __init__(self):\n",
+        "        self.num=0\n",
+        "    def print_current_value(self):\n",
+        "        print('현재값은:',self.num)\n",
+        "\n",
+        "c1=counter()\n",
+        "c1.print_current_value()\n",
+        "\n",
+        "\n",
+        "c2=counter()\n",
+        "c2.print_current_value()\n",
+        "\n",
+        "## 메소드를 구현해 보자 두가지 정도....\n",
+        "## 숫자를 하나씩 증가\n",
+        "## 숫자를 0으로 초기화"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "현재값은: 0\n",
+            "현재값은: 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b63w116sdeAF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "9ea8d009-d6b7-44f0-bdf3-686e14c1c781"
+      },
+      "source": [
+        "class counter:\n",
+        "    def __init__(self):\n",
+        "        self.num=0\n",
+        "        \n",
+        "    def increment(self):\n",
+        "        self.num=self.num+1\n",
+        "        \n",
+        "    def reset(self):\n",
+        "        self.num=0\n",
+        "        \n",
+        "    def print_current_value(self):\n",
+        "        print('현재값은:',self.num)\n",
+        "\n",
+        "c1=counter()\n",
+        "c1.print_current_value()\n",
+        "\n",
+        "print('================================================')\n",
+        "\n",
+        "c1.increment()\n",
+        "print(c1)\n",
+        "c1.increment()\n",
+        "print(c1)\n",
+        "c1.print_current_value()\n",
+        "\n",
+        "print('================================================')\n",
+        "\n",
+        "c1.reset()\n",
+        "print(c1)\n",
+        "c1.print_current_value()\n",
+        "\n",
+        "print('================================================')\n",
+        "\n",
+        "c2=counter()\n",
+        "c2.print_current_value()"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "현재값은: 0\n",
+            "================================================\n",
+            "<__main__.counter object at 0x7fdbe8637550>\n",
+            "<__main__.counter object at 0x7fdbe8637550>\n",
+            "현재값은: 2\n",
+            "================================================\n",
+            "<__main__.counter object at 0x7fdbe8637550>\n",
+            "현재값은: 0\n",
+            "================================================\n",
+            "현재값은: 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "60Xfk6mPgOQa",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
@@ -475,6 +610,116 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zfsaPxd816kD",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **method type**\n",
+        " - instance method - 객체로 호출\n",
+        "   - 메쏘드는 객체 레벨로 호출 되기 때문에, 해당 메쏘드를 호출한 객체에만 영향을 미침\n",
+        " - class method    - class로 호출\n",
+        "       - 클래스 메쏘드의 경우, 클래스 레벨로 호출되기 때문에, 클래스 멤버 변수만 변경 가능\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XIsT0AjiddyV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "a3f7c024-b6be-433c-fc59-c8f8b6afaf19"
+      },
+      "source": [
+        "## 어떤 경우는 instance 레벨로 호출할 필요가 없는 경우도 있을 수 있다. \n",
+        "\n",
+        "class Math:\n",
+        "    def add(self,a,b):\n",
+        "        return (a+b)\n",
+        "    def multiply(self,a,b):\n",
+        "        return (a*b)\n",
+        "    \n",
+        "m=Math() ## Math class 로부터 m이라는 객체를 생성 마치 a=list()와 동일한 개념\n",
+        "print(type(m))\n",
+        "a=list()\n",
+        "print(type(a))\n",
+        "\n",
+        "m.add(10,20)\n",
+        "m.multiply(10,20)\n",
+        "\n",
+        "## 가만히 보면 Math라는 class를 보면 속성이 없다. 즉 self가 할일이 없다. 내부의 데이터를 유지하지 않는 즉 속성이 없는 class의 경우\n",
+        "## 인스턴스 레벨의 메소드를 생성할 필요가 없다. \n",
+        "## 이럴 경우 @staticmethod 를 명시해주고 self를 제거하면 된다. --> class 이름으로 함수를 호출할 수 있다. "
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class '__main__.Math'>\n",
+            "<class 'list'>\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xwKsCcK2hyvB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "611c4066-0123-485e-8920-29bbf0ea6488"
+      },
+      "source": [
+        "class Math:\n",
+        "    @staticmethod\n",
+        "    def add(a,b):\n",
+        "        return (a+b)\n",
+        "    \n",
+        "    @staticmethod\n",
+        "    def multiply(a,b):\n",
+        "        return (a*b)\n",
+        "\n",
+        "Math.add(10,20)\n",
+        "Math.multiply(10,20)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -580,20 +825,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zfsaPxd816kD",
-        "colab_type": "text"
-      },
-      "source": [
-        "#### **method type**\n",
-        " - instance method - 객체로 호출\n",
-        "   - 메쏘드는 객체 레벨로 호출 되기 때문에, 해당 메쏘드를 호출한 객체에만 영향을 미침\n",
-        " - class method    - class로 호출\n",
-        "       - 클래스 메쏘드의 경우, 클래스 레벨로 호출되기 때문에, 클래스 멤버 변수만 변경 가능\n"
-      ]
     },
     {
       "cell_type": "code",
