Colaboratory를 통해 생성됨

--- a/Chapter_06_클래스와_객체의_이해.ipynb
+++ b/Chapter_06_클래스와_객체의_이해.ipynb
@@ -740,6 +740,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "thbbHEd0idln",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6gNtzILk16js",
         "colab_type": "code",
         "colab": {}
