Colaboratory를 통해 생성됨

--- a/Chapter_06_클래스와_객체의_이해.ipynb
+++ b/Chapter_06_클래스와_객체의_이해.ipynb
@@ -742,26 +742,105 @@
       "metadata": {
         "id": "thbbHEd0idln",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "058469f4-6caa-4b15-8d28-0a14f86e92b0"
       },
       "source": [
-        ""
+        "class person:\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "        \n",
+        "    def eat(self,food):\n",
+        "        print('{}은 {}를 먹습니다.'.format(self.name,food))\n",
+        "    def sleep(self,minute):\n",
+        "        print('{}은 {}분동안 잡니다.'.format(self.name,minute))\n",
+        "    def work(self,minute):\n",
+        "        print('{}은 {}분동안 일을 합니다.'.format(self.name,minute))\n",
+        "        \n",
+        "class student:\n",
+        "    pass\n",
+        "class employee:\n",
+        "    pass\n",
+        "\n",
+        "bob=person('bob',30)\n",
+        "bob.eat('bbq')\n",
+        "bob.sleep(60)\n",
+        "bob.work(120)\n",
+        "\n",
+        "## 이것을 기반으로 student 와 employee를 만들어 보자\n",
+        "## 이 둘은 기본적으로 person에 기반한다. "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob은 bbq를 먹습니다.\n",
+            "bob은 60분동안 잡니다.\n",
+            "bob은 120분동안 일을 합니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6gNtzILk16js",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "6d8de077-307f-4b58-806b-5d93713a223e"
       },
       "source": [
-        ""
+        "class person:\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "        \n",
+        "    def eat(self,food):\n",
+        "        print('{}은 {}를 먹습니다.'.format(self.name,food))\n",
+        "    def sleep(self,minute):\n",
+        "        print('{}은 {}분동안 잡니다.'.format(self.name,minute))\n",
+        "    def work(self,minute):\n",
+        "        print('{}은 {}분동안 일을 합니다.'.format(self.name,minute))\n",
+        "        \n",
+        "class student(person):     ## person이라는 class의 기능을 상속받기 위한 작업 (부모 class)를 붙여준다. person의 메소드를 모두 상속받는다.\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    \n",
+        "class employee(person):    ## person이라는 class의 기능을 상속받기 위한 작업 (부모 class)를 붙여준다.\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    \n",
+        "bob=student('bob',30)\n",
+        "bob.eat('bbq')\n",
+        "bob.sleep(60)\n",
+        "bob.work(120)\n",
+        "\n",
+        "## 이 모델링에 문제가 있어 보인다. 학생은 일을 하지 않고 공부를 하기 때문에..\n",
+        "## 부모 class에서 정의된 메소드를 학생 class에서 재정의가 필요하다. "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob은 bbq를 먹습니다.\n",
+            "bob은 60분동안 잡니다.\n",
+            "bob은 120분동안 일을 합니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -780,13 +859,82 @@
       "metadata": {
         "id": "mXLunb7Q16jw",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "c13a47cb-46db-48c9-aecc-a91de2ce7957"
       },
       "source": [
-        ""
+        "class person:\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "        \n",
+        "    def eat(self,food):\n",
+        "        print('{}은 {}를 먹습니다.'.format(self.name,food))\n",
+        "    def sleep(self,minute):\n",
+        "        print('{}은 {}분동안 잡니다.'.format(self.name,minute))\n",
+        "    def work(self,minute):\n",
+        "        print('{}은 {}분동안 일을 합니다.'.format(self.name,minute))\n",
+        "        \n",
+        "class student(person):     ## person이라는 class의 기능을 상속받기 위한 작업 (부모 class)를 붙여준다. person의 메소드를 모두 상속받는다.\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    def work(self,minute):  ## 부모 class와 달리 work를 재정의-->method override 개념\n",
+        "         print('{}은 {}분동안 공부를 합니다.'.format(self.name,minute))\n",
+        "    \n",
+        "class employee(person):    ## person이라는 class의 기능을 상속받기 위한 작업 (부모 class)를 붙여준다.\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    def work(self,minute):  ## 부모 class와 달리 work를 재정의-->method override 개념\n",
+        "        print('{}은 {}분동안 업무를 합니다.'.format(self.name,minute))\n",
+        "        \n",
+        "        \n",
+        "bob=person('bob',30)\n",
+        "bob.eat('bbq')\n",
+        "bob.sleep(60)\n",
+        "bob.work(120)\n",
+        "\n",
+        "print('=============================================================')\n",
+        "\n",
+        "bob=student('bob',30)\n",
+        "bob.eat('bbq')\n",
+        "bob.sleep(60)\n",
+        "bob.work(120)\n",
+        "\n",
+        "print('=============================================================')\n",
+        "\n",
+        "bob=employee('bob',30)\n",
+        "bob.eat('bbq')\n",
+        "bob.sleep(60)\n",
+        "bob.work(120)\n",
+        "\n",
+        "\n",
+        "## 문제점 : override를 하게 되면 부모의 메소드를 사용할 수 없게 된다. 이때 필요한 기능이 super()라는 기능이다. "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob은 bbq를 먹습니다.\n",
+            "bob은 60분동안 잡니다.\n",
+            "bob은 120분동안 일을 합니다.\n",
+            "=============================================================\n",
+            "bob은 bbq를 먹습니다.\n",
+            "bob은 60분동안 잡니다.\n",
+            "bob은 120분동안 공부를 합니다.\n",
+            "=============================================================\n",
+            "bob은 bbq를 먹습니다.\n",
+            "bob은 60분동안 잡니다.\n",
+            "bob은 120분동안 업무를 합니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -804,13 +952,60 @@
       "metadata": {
         "id": "mrq3IICH16j4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "2597707e-2f68-40fa-c48b-17de4c183f72"
       },
       "source": [
-        ""
+        "class person:\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "        \n",
+        "    def eat(self,food):\n",
+        "        print('{}은 {}를 먹습니다.'.format(self.name,food))\n",
+        "    def sleep(self,minute):\n",
+        "        print('{}은 {}분동안 잡니다.'.format(self.name,minute))\n",
+        "    def work(self,minute):\n",
+        "        print('{}은 {}분동안 준비를 합니다.'.format(self.name,minute))\n",
+        "        \n",
+        "class student(person):     ## person이라는 class의 기능을 상속받기 위한 작업 (부모 class)를 붙여준다. person의 메소드를 모두 상속받는다.\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    def work(self,minute):  ## 부모 class와 달리 work를 재정의-->method override 개념\n",
+        "        super().work(minute) ## 부모 class의 work 메소드를 사용하기 위한 코드\n",
+        "        print('{}은 {}분동안 공부를 합니다.'.format(self.name,minute))\n",
+        "    \n",
+        "class employee(person):    ## person이라는 class의 기능을 상속받기 위한 작업 (부모 class)를 붙여준다.\n",
+        "    def __init__(self,name,age):\n",
+        "        self.name=name\n",
+        "        self.age=age\n",
+        "    def work(self,minute):  ## 부모 class와 달리 work를 재정의-->method override 개념\n",
+        "        super().work(minute)  ## 부모 class의 work 메소드를 사용하기 위한 코드\n",
+        "        print('{}은 {}분동안 업무를 합니다.'.format(self.name,minute))\n",
+        "\n",
+        "bob=employee('bob',30)\n",
+        "bob.eat('bbq')\n",
+        "bob.sleep(60)\n",
+        "bob.work(120)\n",
+        "        "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "bob은 bbq를 먹습니다.\n",
+            "bob은 60분동안 잡니다.\n",
+            "bob은 120분동안 준비를 합니다.\n",
+            "bob은 120분동안 업무를 합니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
